fix: menu swiping on safari

--- a/src/components/ModalMenu/index.module.scss
+++ b/src/components/ModalMenu/index.module.scss
@@ -9,8 +9,6 @@
   right: 0;
   left: 0;
 
-  min-height: 100vh;
-
   overflow: hidden;
   transition: left 350ms ease-in;
   background-color: $white;
@@ -21,12 +19,10 @@
     display: flex;
     flex-direction: column;
 
-    // margin-top: autoResize(286px, 342px, $landscape320, $landscape800);
     margin-left: autoResize(24px, 96px, $landscape320, $landscape800);
   }
 
   @media (max-width: $landscape800) {
-    // display: block;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
